<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/screen_horizontal_margin"
    android:paddingVertical="@dimen/screen_vertical_margin">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_margin_normal"
        android:text="@string/institutional_wheels_title"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_wheels"
        android:layout_width="@dimen/image_size_medium"
        android:layout_height="@dimen/image_size_medium"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding_margin_normal"
        android:contentDescription="@string/institutional_wheels_description"
        android:src="@drawable/institutional_icon_wheels"
        app:layout_constraintEnd_toStartOf="@+id/text_view_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_margin_normal"
        android:text="@string/institutional_wheels_description"
        android:textAppearance="?textAppearanceBody2"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_wheels"
        app:layout_constraintTop_toTopOf="@id/image_view_wheels" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="image_view_wheels, text_view_description" />


    <TextView
        android:id="@+id/text_view_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_margin_normal"
        android:layout_marginBottom="@dimen/padding_margin_large"
        android:text="@string/institutional_wheels_details"
        app:layout_constraintBottom_toTopOf="@+id/button_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_bottom" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/institutional_wheels_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_details" />

</androidx.constraintlayout.widget.ConstraintLayout>