<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="noteBinding"
            type="co.tuister.domain.entities.Note" />

        <variable
            name="subjectBinding"
            type="co.tuister.domain.entities.Subject" />

        <import type="android.text.TextUtils" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout_login"
        android:paddingHorizontal="@dimen/screen_horizontal_margin"
        android:paddingVertical="@dimen/screen_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="240dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_details_grade"
                android:inputType="text"
                android:text="@={noteBinding.title}"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_margin_normal"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_input_percentage"
            app:layout_constraintTop_toBottomOf="@+id/text_input_detail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/grade"
                android:inputType="numberSigned|numberDecimal"
                android:text="@={`` + noteBinding.grade}"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_margin_normal"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="@id/text_input_grade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_input_grade">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/percentage"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="4"
                android:text="@={`` + noteBinding.percentage}"
                android:importantForAutofill="no" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_percentage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/grade_total"
                android:inputType="text"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_final_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_total">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_final_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/note_subject"
                android:inputType="text"
                android:enabled="false"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_save"
            app:layout_constraintTop_toBottomOf="@id/text_input_final_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>